--- a/posts.njk
+++ b/posts.njk
@@ -1,6 +1,6 @@
 ---
 title: Posts
-layout: layout.html
+layout: window-pages.html
 tags: [slashpage, page]
 ---
 {% for post in collections.post | reverse %}
