--- a/_includes/window-pages.html
+++ b/_includes/window-pages.html
@@ -40,6 +40,8 @@ layout: layout.html
         <div class="fold-border"></div>
         <div class="fold"></div>
     </div> -->
-    <div class="page"></div>
-    <div class="page"></div>
+    <div class="leaves">
+        <div class="leaf"></div>
+        <div class="leaf"></div>
+    </div>
 </div>
