Hide elements from screen readers

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -61,7 +61,7 @@
                     <rect class="icon-rect" height="31" width="88" fill="#555">
                 </svg>
                 <span class="icon-text">cobb.land © {% year %}</span>
-                <img class="icon-border" src="/images/button-outline-88x31.png">
+                <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
             </a>
             <a class="link-icon" href="https://www.11ty.dev/">
                 <img src="/images/eleventy.gif" alt="built with 11ty" height="31" width="88">
@@ -84,7 +84,7 @@
                     <a href="https://xn--sr8hvo.ws">🕸💍</a>
                     <a href="https://xn--sr8hvo.ws/next">→</a>
                 </span>
-                <img class="icon-border" src="/images/button-outline-88x31.png">
+                <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
             </div>
             <div class="link-icon">
                 <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88" >
@@ -95,14 +95,14 @@
                     <a href="https://fediring.net">fediring</a>
                     <a href="https://fediring.net/next?host=cobb.land">→</a>
                 </span>
-                <img class="icon-border" src="/images/button-outline-88x31.png">
+                <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
             </div>
             <a class="link-icon" id="random-blog-button" href="/">
                 <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
                     <rect class="icon-rect" height="31" width="88" fill="#A82CB9">
                 </svg>
                 <span class="icon-text" style="font-size: 18px;">🎲</span>
-                <img class="icon-border" src="/images/button-outline-88x31.png">
+                <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
             </a>
 
     </footer>
