--- a/blogroll.njk
+++ b/blogroll.njk
@@ -24,7 +24,7 @@ tags: [slashpage, page]
                                 <img class="icon-image" src="{{ blog.data.image }}" alt="{{ blog.data.title }}">
                             {% endif %}
                             <span class="icon-text">{{ blog.data.title }}</span>
-                            <img class="icon-border" src="/images/button-outline-88x31.png">
+                            <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
                         </svg>
                     </a>
                 {% endif %}
