--- a/_includes/window-pages.html
+++ b/_includes/window-pages.html
@@ -40,7 +40,7 @@ layout: layout.html
         <div class="fold-border"></div>
         <div class="fold"></div>
     </div> -->
-    <div class="leaves">
+    <div aria-hidden="true" class="leaves">
         <div class="leaf"></div>
         <div class="leaf"></div>
     </div>
