Add virtual moose

--- a/blogroll.njk
+++ b/blogroll.njk
@@ -20,7 +20,7 @@ tags: [slashpage, page]
                     <a class="link-icon" href="{{ blog.data.link }}">
                         <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" alt="{{ blog.data.title }}" height="31" width="88">
                             <rect class="icon-rect" width="88" height="31" fill="#{{ blog.data.color }}">
-                            {% if blog.data.image %}
+                            {% if blog.data.image !== "no" %}
                                 <img class="icon-image" src="{{ blog.data.image }}" alt="{{ blog.data.title }}">
                             {% endif %}
                             <span class="icon-text">{{ blog.data.title }}</span>
