--- a/_includes/window.html
+++ b/_includes/window.html
@@ -12,7 +12,7 @@ layout: layout.html
                 <div class="title-bar-line"></div>
             </div>
             <div class="title-bar-title">
-                <a href="/" class="first-slash {{ special | default: "" }}">/</a><a class="backlink {{ special | default: "invisible" }}" href="../">{{ special | default: "" }}/</a><h1 class="title-text">{{ title }}</h1>
+                <a href="/" class="first-slash {{ special | default: "" }}">/</a><a class="backlink {{ special | default: "invisible" }}" href="/{{ special | default: "" }}/">{{ special | default: "" }}/</a><h1 class="title-text">{{ title }}</h1>
             </div>
             <div class="lines lines-left" aria-hidden="true">
                 <div class="lines-left-of-button">
