Add atom feed to head

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -6,6 +6,7 @@
     <!-- <meta name="description" content="A website"> -->
     <!-- <meta name="theme-color" content="#75cec8"> -->
     <title>{{ title }}</title>
+    <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="cobb.land">
     <link rel="icon" href="/images/favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
     <link rel=icon href="/images/favicon-16x16.png" sizes="16x16" type="image/png">
     <link rel=icon href="/images/favicon-32x32.png" sizes="32x32" type="image/png">
