--- a/_includes/window-pages.html
+++ b/_includes/window-pages.html
@@ -33,6 +33,17 @@ layout: layout.html
             </div>
         </div>
     </div>
+    <ul class="window-nav">
+        <li>
+            <a href="/posts">All</a>
+        </li>
+        <li>
+            <a href="/articles">Articles</a>
+        </li>
+        <li>
+            <a href="/notes">Notes</a>
+        </li>
+    </ul>
     <main>
             {{ content }}
     </main>
