--- a/posts.njk
+++ b/posts.njk
@@ -22,4 +22,6 @@ layout: window-pages.html
             {% endif %}
 {% endfor %}
 
-<p>Subscribe via <a href="/feed.xml">RSS</a>.</p>
+<hr>
+
+<p class="note">Subscribe via <a href="/feed.xml">RSS</a>.</p>
