--- a/articles.njk
+++ b/articles.njk
@@ -1,14 +1,15 @@
 ---
-title: Notes
+title: Articles
 layout: window-pages.html
 ---
 {% for post in collections.post | reverse %}
-            {% if "note" in post.data.tags %}
+            {% if "article" in post.data.tags %}
                 <div class="post-card">
-                    <div class="post-card-note">{{ post.content | safe }}</div>
                     <a href="{{ post.url }}">
-                        <p class="date">{{ post.date.toDateString() }}</p>
+                        <h2>{{ post.data.title }}</h2>
                     </a>
+                    <p class="post-card-summary">{{ post.data.summary }}</p>
+                    <p class="date">{{ post.date.toDateString() }}</p>
                 </div>
             {% endif %}
 {% endfor %}
