--- a/pages.njk
+++ b/pages.njk
@@ -5,8 +5,6 @@ layout: window.html
 
 <h2>Slash Pages</h2>
 
-<p>What are <a href="https://slashpages.net/">slash pages</a>?</p>
-
 <div class="pages">
     <ul>
         {% for page in collections.slashpage | sort(attribute='data.title') %}
@@ -34,3 +32,7 @@ layout: window.html
         {% endfor %}
     </ul>
 </div>
+
+<hr>
+
+<p class="note">What are <a href="https://slashpages.net/">slash pages</a>?</p>
