Remove profile picture from posts

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -115,6 +115,7 @@
         <a rel="me" class="u-url" href="https://dice.camp/@cobb">@cobb@dice.camp</a>
         <a class="u-email" href="mailto:hello@cobb.land">hello@cobb.land</a>
         <a class="u-logo u-photo" href="/images/android-chrome-512x512.png"></a>
+        <img class="u-photo" src="/images/android-chrome-512x512.png" />
         <p class="p-note">A writer, artist, programmer, and game designer currently dwelling in the foothills of Appalachia.</p>
     </div>
 
