Links to Follow

--- a/articles.njk
+++ b/articles.njk
@@ -16,4 +16,4 @@ layout: window-pages.html
 
 <hr>
 
-<p class="note">Subscribe via <a href="/feed.xml">RSS</a>.</p>
+<p class="note">Subscribe via <a href="/follow">RSS</a>.</p>
