--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -52,7 +52,7 @@
             <a class="link-icon" href="https://cobb.land">
                 <img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88">
             </a>
-            <a class="link-icon" href="/feed.xml">
+            <a class="link-icon" href="/follow">
                 <img src="/images/rss-8831.jpg" alt="RSS" height="31" width="88">
             </a>
             <a class="link-icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
