--- a/index.njk
+++ b/index.njk
@@ -6,7 +6,7 @@ special: home-title
 
 <h2>Howdy!</h2>
 
-<p>I'm <a href="/about">Cobb</a> (or cobbland or cobb-dot-land or even Jacob) and this is my <a href="/colophon">website</a>. Follow my <a href="/feed.xml">RSS feed</a> to keep up. I also make tabletop roleplay games and adventures as <a href="https://illuminatedsnail.com">Illuminated Snail</a>. And I have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason).
+<p>I'm <a href="/about">Cobb</a> (or cobbland or cobb-dot-land or even Jacob) and this is my <a href="/colophon">website</a>. Follow my <a href="/follow">RSS feed</a> to keep up. I also make tabletop roleplay games and adventures as <a href="https://illuminatedsnail.com">Illuminated Snail</a>. And I have a <a href="https://buttondown.com/orbitaldetritus">newsletter</a> (for some reason).
 
 <div class="home-latest">
 
@@ -32,7 +32,7 @@ special: home-title
         <h2>Posts</h2>
     
         <ul class="posts">
-            {% for post in collections.post | reverse | limit(12) %}
+            {% for post in collections.article | reverse | limit(12) %}
                 <li>
                     <a href="{{ post.url }}">
                         {{ post.data.title }}
