--- a/posts.njk
+++ b/posts.njk
@@ -24,4 +24,4 @@ layout: window-pages.html
 
 <hr>
 
-<p class="note">Subscribe via <a href="/feed.xml">RSS</a>.</p>
+<p class="note">Subscribe via <a href="/follow">RSS</a>.</p>
