--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -18,6 +18,7 @@
     <link rel="webmention" href="https://webmention.io/cobb.land/webmention">
     <link rel="pingback" href="https://webmention.io/cobb.land/xmlrpc">
     <script type="module" src="/js/scripts.js"></script>
+    <meta property="og:image" content="https://cobb.land/images/android-chrome-512x512.png">
 </head>
 <body>
 
