--- a/_includes/photo.njk
+++ b/_includes/photo.njk
@@ -1,11 +1,12 @@
 ---
 layout: "window.html"
 ---
-<article class="h-entry">
-    <div class="p-content">{{ content | safe }}</div>
+<div class="h-entry">
+    <img class="u-photo" src="{{ photo }}">
+    <p class="p-content">{{ caption }}</p>
     <p class="article-date">Posted or edited on <a class="u-url" href="{{ page.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a>.</p>
     <a rel="syndication invisible" class="u-syndication" href="{{ possed }}"></a>
-</article>
+</div>
 
 <hr>
 
