--- a/_includes/window-pages.html
+++ b/_includes/window-pages.html
@@ -43,6 +43,9 @@ layout: layout.html
         <li>
             <a href="/notes">Notes</a>
         </li>
+        <li>
+            <a href="/photos">Photos</a>
+        </li>
     </ul>
     <main>
             {{ content }}
