--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,13 @@ a:hover {
     text-decoration: none;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+    display: block;
+}
+
 /* Navigation */
 
 header {
@@ -330,17 +337,30 @@ main *:last-child {
     margin: 0 0 1.5rem 0;
 }
 
-.post-card a {
-    display: inline;
-    width: min-content;
-}
-
 .post-card h2 {
     margin-bottom: 0.2rem;
 }
 
 .post-card-summary {
     margin-bottom: 0.2rem;
+}
+
+.photo-wall {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+    gap: 1rem;
+}
+
+.photo-wall div {
+    height: 100%;
+    aspect-ratio: 1 / 1;
+}
+
+.photo-wall img {
+    object-fit: cover;
+    min-height: 100%;
+    min-width: 100%;
 }
 
 .p-summary,
@@ -451,24 +471,6 @@ ul.posts {
     background-color: inherit;
     box-shadow: 1px 1px var(--dk-grey);
 }
-
-/* .fold {
-    position: relative;
-    width: 0;
-    height: 0;
-    border-top: 50px solid var(--bg-color);
-    border-left: 50px solid transparent;
-    z-index: 2;
-}
-
-.fold-border {
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-top: 54px solid var(--text-color);
-    border-left: 54px solid transparent;
-    z-index: 1;
-} */
 
 .leaf {
     border-bottom: 2px solid var(--text-color);
