--- a/posts.njk
+++ b/posts.njk
@@ -3,23 +3,28 @@ title: Posts
 layout: window-pages.html
 ---
 {% for post in collections.post | reverse %}
-            {% if "article" in post.data.tags %}
-                <div class="post-card">
-                    <a href="{{ post.url }}">
-                        <h2>{{ post.data.title }}</h2>
-                    </a>
-                    <p class="post-card-summary">{{ post.data.summary }}</p>
-                    <p class="date">{{ post.date.toDateString() }}</p>
-                </div>
-            {% endif %}
-            {% if "note" in post.data.tags %}
-                <div class="post-card">
-                    <div class="post-card-note">{{ post.content | safe }}</div>
-                    <a href="{{ post.url }}">
-                        <p class="date">{{ post.date.toDateString() }}</p>
-                    </a>
-                </div>
-            {% endif %}
+    {% if "article" in post.data.tags %}
+        <div class="post-card">
+            <h2><a href="{{ post.url }}">{{ post.data.title }}</a></h2>
+            <p class="post-card-summary">{{ post.data.summary }}</p>
+            <p class="date">{{ post.date.toDateString() }}</p>
+        </div>
+    {% endif %}
+    {% if "note" in post.data.tags %}
+        <div class="post-card">
+            <div class="post-card-note">{{ post.content | safe }}</div>
+            <p class="date"><a href="{{ post.url }}">{{ post.date.toDateString() }}</a></p>
+        </div>
+    {% endif %}
+    {% if "photo" in post.data.tags %}
+        <div class="post-card">
+            <a href="{{ post.url }}" style="background-color:inherit;">
+                <img src="/posts/photos/images/{{ post.data.photo }}" alt="{{ post.data.caption }}">
+            </a>
+            <p class="post-card-note" style="margin-top:0;">{{ post.data.caption }}</p>
+            <p class="date">{{ post.date.toDateString() }}</p>
+        </div>
+    {% endif %}
 {% endfor %}
 
 <p class="note">Subscribe via <a href="/follow">RSS</a>.</p>
