--- a/_includes/window-pages.html
+++ b/_includes/window-pages.html
@@ -46,6 +46,9 @@ layout: layout.html
         <li>
             <a href="/photos">Photos</a>
         </li>
+        <li>
+            <a href="/reviews">Reviews</a>
+        </li>
     </ul>
     <main>
             {{ content }}
