--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ body {
     pointer-events: none;
 } */
 
-p, h1, h2, h3, h4, h5, h6, ul {
+p, h1, h2, h3, h4, h5, h6, ul, ol, li {
     font-family: var(--main-font-family);
 }
 
