--- a/index.njk
+++ b/index.njk
@@ -32,13 +32,15 @@ special: home-title
         <h2>Posts</h2>
     
         <ul class="posts">
-            {% for post in collections.article | reverse | limit(12) %}
-                <li>
-                    <a href="{{ post.url }}">
-                        {{ post.data.title }}
-                    </a>
-                    <p class="date">{{ post.date.toDateString() }}</p>
-                </li>
+            {% for post in collections.post | reverse | limit(12) %}
+                {% if "article" in post.data.tags or "review" in post.data.tags%}
+                    <li>
+                        <a href="{{ post.url }}">
+                            {{ post.data.title }}
+                        </a>
+                        <p class="date">{{ post.date.toDateString() }}</p>
+                    </li>
+                {% endif %}
             {% endfor %}
         </ul>
     
