--- a/posts.njk
+++ b/posts.njk
@@ -25,6 +25,17 @@ layout: window-pages.html
             <p class="date">{{ post.date.toDateString() }}</p>
         </div>
     {% endif %}
+    {% if "review" in post.data.tags %}
+        <div class="post-card">
+            <h2><a href="{{ post.url }}">{{ post.data.title }}</a>
+                {% if post.data.score %}
+                    ({{post.data.score}}/4)
+                {% endif %}
+            </h2>
+            <p class="post-card-summary">{{ post.data.summary }}</p>
+            <p class="date">{{ post.date.toDateString() }}</p>
+        </div>
+    {% endif %}
 {% endfor %}
 
 <p class="note">Subscribe via <a href="/follow">RSS</a>.</p>
