Window for footer

--- a/_includes/review.njk
+++ b/_includes/review.njk
@@ -1,3 +1,24 @@
 ---
-layout: window.html
+layout: "window.html"
 ---
+<article class="h-entry">
+
+    <h1 class="p-name">{{ title }}</h1>
+
+    <p class="p-summary">{{ summary }}</p>
+
+    <div class="e-content">{{ content | safe}}</div>
+
+    <p class="article-date">Posted or edited on <a class="u-url" href="{{ page.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a>.</p>
+
+    <a rel="syndication invisible" class="u-syndication" href="{{ possed }}"></a>
+
+</article>
+
+<hr>
+
+<div class="reply-buttons">
+    <a class="link-button" href="https://webmention.io/cobb.land/webmention"><img src="/images/webmention-88x31.jpg" alt="webmention button" height="31" width="88" /></a>
+    <a class="link-button" href="mailto:hello@cobb.land?subject={% uri title %}"><img src="/images/email-88x31.jpg" alt="email button" height="31" width="88" /></a>
+    <a class="link-button" href="{{ possed }}"><img src="/images/mastodon-88x31.jpg" alt="mastodon button" height="31" width="88" /></a>
+</div>
