--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -49,65 +49,92 @@
 
     {{ content }}
 
-    <footer id="footer">
-            <a class="link-icon" href="https://cobb.land">
-                <img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88">
-            </a>
-            <a class="link-icon" href="/follow">
-                <img src="/images/rss-8831.jpg" alt="RSS" height="31" width="88">
-            </a>
-            <a class="link-icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
-                <img src="/images/by-nc-sa.png" alt="cc by-nc-sa" height="31" width="88">
-            </a>
-            <a class="link-icon" href="/">
-                <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
-                    <rect class="icon-rect" height="31" width="88" fill="#555">
-                </svg>
-                <span class="icon-text">cobb.land © {% year %}</span>
-                <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
-            </a>
-            <a class="link-icon" href="https://www.11ty.dev/">
-                <img src="/images/eleventy.gif" alt="built with 11ty" height="31" width="88">
-            </a>
-            <a class="link-icon" href="https://indieweb.org/">
-                <img src="/images/indieweb-88x31.gif" alt="EWC Now! indieweb.org" height="31" width="88">
-            </a>
-            <a class="link-icon" href="https://32bit.cafe/">
-                <img src="/images/32b-pcb.png" alt="32b cafe" height="31" width="88">
-            </a>
-            <a class="link-icon" href="https://moonpr1sm.com/random/30plusclub">
-                <img src="/images/30plusclub.gif" alt="30+ club" height="31" width="88">
-            </a>
-            <div class="link-icon">
-                <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88" >
-                    <rect class="icon-rect" height="31" width="88" fill="#FC4F1E">
-                </svg>
-                <span class="icon-text" style="font-size: 18px;">
-                    <a href="https://xn--sr8hvo.ws/previous">←</a>
-                    <a href="https://xn--sr8hvo.ws">🕸💍</a>
-                    <a href="https://xn--sr8hvo.ws/next">→</a>
-                </span>
-                <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
+    <footer>
+        <div class="content-window" onload="loadWindow">
+            <div class="title-bar">
+                <div class="title-lines">
+                    <div class="lines" aria-hidden="true">
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
+                        <div class="title-bar-line"></div>
+                    </div>
+                    <div class="title-bar-title">
+                        footer
+                    </div>
+                    <div class="lines lines-left" aria-hidden="true">
+                        <div class="lines-left-of-button">
+                            <div class="title-bar-line"></div>
+                            <div class="title-bar-line"></div>
+                            <div class="title-bar-line"></div>
+                            <div class="title-bar-line"></div>
+                            <div class="title-bar-line"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="link-icon">
-                <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88" >
-                    <rect class="icon-rect" height="31" width="88" fill="#00A4FF">
-                </svg>
-                <span class="icon-text">
-                    <a href="https://fediring.net/previous?host=cobb.land">←</a>
-                    <a href="https://fediring.net">fediring</a>
-                    <a href="https://fediring.net/next?host=cobb.land">→</a>
-                </span>
-                <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
-            </div>
-            <a class="link-icon" id="random-blog-button" href="/">
-                <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
-                    <rect class="icon-rect" height="31" width="88" fill="#A82CB9">
-                </svg>
-                <span class="icon-text" style="font-size: 18px;">🎲</span>
-                <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
-            </a>
 
+            <div id="footer">
+                <a class="link-icon" href="https://cobb.land">
+                    <img src="/images/cobbland-8831.jpg" alt="old-school 88 by 31 pixel web image, orange and green, says cobb.land" height="31" width="88">
+                </a>
+                <a class="link-icon" href="/follow">
+                    <img src="/images/rss-8831.jpg" alt="RSS" height="31" width="88">
+                </a>
+                <a class="link-icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">
+                    <img src="/images/by-nc-sa.png" alt="cc by-nc-sa" height="31" width="88">
+                </a>
+                <a class="link-icon" href="/">
+                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
+                        <rect class="icon-rect" height="31" width="88" fill="#555">
+                    </svg>
+                    <span class="icon-text">cobb.land © {% year %}</span>
+                    <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
+                </a>
+                <a class="link-icon" href="https://www.11ty.dev/">
+                    <img src="/images/eleventy.gif" alt="built with 11ty" height="31" width="88">
+                </a>
+                <a class="link-icon" href="https://indieweb.org/">
+                    <img src="/images/indieweb-88x31.gif" alt="EWC Now! indieweb.org" height="31" width="88">
+                </a>
+                <a class="link-icon" href="https://32bit.cafe/">
+                    <img src="/images/32b-pcb.png" alt="32b cafe" height="31" width="88">
+                </a>
+                <a class="link-icon" href="https://moonpr1sm.com/random/30plusclub">
+                    <img src="/images/30plusclub.gif" alt="30+ club" height="31" width="88">
+                </a>
+                <div class="link-icon">
+                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88" >
+                        <rect class="icon-rect" height="31" width="88" fill="#FC4F1E">
+                    </svg>
+                    <span class="icon-text" style="font-size: 18px;">
+                        <a href="https://xn--sr8hvo.ws/previous">←</a>
+                        <a href="https://xn--sr8hvo.ws">🕸💍</a>
+                        <a href="https://xn--sr8hvo.ws/next">→</a>
+                    </span>
+                    <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
+                </div>
+                <div class="link-icon">
+                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88" >
+                        <rect class="icon-rect" height="31" width="88" fill="#00A4FF">
+                    </svg>
+                    <span class="icon-text">
+                        <a href="https://fediring.net/previous?host=cobb.land">←</a>
+                        <a href="https://fediring.net">fediring</a>
+                        <a href="https://fediring.net/next?host=cobb.land">→</a>
+                    </span>
+                    <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
+                </div>
+                <a class="link-icon" id="random-blog-button" href="/">
+                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
+                        <rect class="icon-rect" height="31" width="88" fill="#A82CB9">
+                    </svg>
+                    <span class="icon-text" style="font-size: 18px;">🎲</span>
+                    <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
+                </a>
+            </div>
+        </div>
     </footer>
 
     <div class="h-card invisible">
