--- a/css/styles.css
+++ b/css/styles.css
@@ -501,6 +501,11 @@ ul.posts {
 /* Footer */
 
 footer {
+    max-width: 673px;
+    margin: 1rem;
+}
+
+#footer {
     margin: 1rem;
     display: flex;
     flex-wrap: wrap;
