--- a/css/styles.css
+++ b/css/styles.css
@@ -333,7 +333,7 @@ main *:last-child {
 .reply-buttons {
     display: flex;
     flex-wrap: wrap;
-    gap: 0.4rem;
+    gap: 0.8rem;
     margin-top: 0.8rem;
 }
 
@@ -504,21 +504,24 @@ ul.posts {
 
 /* Footer */
 
-footer {
-    max-width: 673px;
-    margin: 1rem;
+footer .content-window {
+    margin: 1rem 0.6rem;
+    max-width: 830px;
 }
 
 #footer {
     margin: 1rem;
     display: flex;
+    justify-content: flex-start;
+    justify-items: flex-start;
+    align-items: flex-start;
     flex-wrap: wrap;
-    max-width: 750px;
+    gap: 0.8rem;
 }
 
 .link-icon {
     text-decoration: none;
-    margin: 0.4rem;
+    /* margin: 0.4rem; */
     position: relative;
     height: 31px;
     width: 88px;
