--- a/media.njk
+++ b/media.njk
@@ -7,7 +7,7 @@ tags: [slashpage, page]
 
 <ul class="media-card">
     <li><b>Level:</b> 2</li>
-    <li><b>Coins:</b> 4</li>
+    <li><b>Coins:</b> 5</li>
     <li><b>Progress:</b> 3/4 shelved to level 3</li>
     <li><b>Playlist Slots Unlocked:</b> 3</li>
 </ul>
@@ -55,7 +55,7 @@ tags: [slashpage, page]
 
 <h2>Binned</h2>
 
-<p>Future "carts". Collections to choose from when loading my playlist.</p>
+<p>Future "carts". Collections to choose from when loading my playlist. (Have to spend coins.)</p>
 
 <ol>
     {% for post in collections.media %}
