--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,7 @@
 :root { /* C64 colors from https://www.pepto.de/projects/colorvic/ */
     /* --black: #000000; */
     --black: #1b1b1b;
-    /* --white: #ffffff; */
-    --white: #fff8e7;
+    --white: #ffffff;
     --red: #813338;
     --cyan: #75cec8;
     --purple: #8e3c97;
@@ -21,6 +20,9 @@
     --lt-grey: #b2b2b2;
 
     /* not from c64 */
+    --eerie-black: #1b1b1b;
+    --cosmic-latte: #fff8e7;
+    --bone-white: #F9F6EE;
     --cobbland-orange: #C15300;
     --cobbland-green: #006C67;
 }
@@ -28,7 +30,7 @@
 :root {
     --border-color: var(--cyan);
     --border-color-alt: var(--lt-blue);
-    --bg-color: var(--white);
+    --bg-color: var(--bone-white);
     --title-color: var(--black);
     --heading-color: var(--black);
     --text-color: var(--black);
