--- a/_includes/note.njk
+++ b/_includes/note.njk
@@ -2,8 +2,11 @@
 layout: "window.html"
 ---
 <article class="h-entry">
-    <div class="p-content">{{ content | safe }}</div>
-    <p class="article-date">Posted or edited on <a class="u-url" href="{{ page.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a>.</p>
+    {% if reply %}
+        <p class="note">In reply to <a href="{{ reply }}" class="u-in-reply-to">{{ reply }}</a></p>
+    {% endif %}
+    <div class="p-content p-name">{{ content | safe }}</div>
+    <p class="article-date">Posted or edited on <a class="u-url" href="{{ page.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a></p>
     <a rel="syndication invisible" class="u-syndication" href="{{ possed }}"></a>
 </article>
 
