--- a/notes.njk
+++ b/notes.njk
@@ -11,6 +11,13 @@ layout: window-pages.html
             </a>
         </div>
     {% endif %}
+    {% if "reply" in post.data.tags %}
+        <div class="post-card">
+            <p class="note" style="margin: 0 0 3.2px;">In reply to <a href="{{ post.data.reply }}">{{ post.data.reply }}</a></p>
+            <div class="post-card-note">{{ post.content | safe }}</div>
+            <p class="date"><a href="{{ post.url }}">{{ post.date.toDateString() }}</a></p>
+        </div>
+    {% endif %}
 {% endfor %}
 
 <p class="note">Subscribe via <a href="/follow">RSS</a>.</p>
