--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <meta name="description" content="A website"> -->
-    <!-- <meta name="theme-color" content="#75cec8"> -->
+    <meta name="theme-color" content="#75cec8">
     <title>{{ title }}</title>
     <link rel="alternate" href="/feed.xml" type="application/atom+xml" title="cobb.land">
     <link rel="icon" href="/images/favicon.ico" sizes="16x16 32x32 48x48" type="image/x-icon">
