--- a/_includes/review.njk
+++ b/_includes/review.njk
@@ -24,3 +24,5 @@ layout: "window.html"
     <a class="link-button" href="mailto:hello@cobb.land?subject={% uri title %}"><img src="/images/email-88x31.jpg" alt="email button" height="31" width="88" /></a>
     <a class="link-button" href="{{ possed }}"><img src="/images/mastodon-88x31.jpg" alt="mastodon button" height="31" width="88" /></a>
 </div>
+
+<div id="webmentions"></div>
