--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -17,6 +17,7 @@
     <meta name="fediverse:creator" content="@cobb@dice.camp">
     <link rel="webmention" href="https://webmention.io/cobb.land/webmention">
     <link rel="pingback" href="https://webmention.io/cobb.land/xmlrpc">
+    <link rel="feed" type="text/html" href="/h-feed/">
     <script type="module" src="/js/scripts.js"></script>
     <meta property="og:image" content="https://cobb.land/images/android-chrome-512x512.png">
 </head>
@@ -28,7 +29,7 @@
         <nav>
             <ul>
                 <li>
-                    <a class="logo-image" href="/"><img src="/images/logotinywhite.png" alt="logo"><img src="/images/logotiny.png" alt="logo">cobb.land</a>
+                    <a class="logo-image" href="/"><img src="/images/logotinywhite.png" aria-hidden="true"><img src="/images/logotiny.png" aria-hidden="true">cobb.land</a>
                 </li>
                 <li>
                     <a href="/about">About</a>
