--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -45,7 +45,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="time" aria-hidden="true">00/00/0000 00:00</div>
+        <div class="time invisible" aria-hidden="true">00/00/0000 00:00</div>
     </header>
 
     {{ content }}
