--- a/notes.njk
+++ b/notes.njk
@@ -13,7 +13,7 @@ layout: window-pages.html
     {% endif %}
     {% if "reply" in post.data.tags %}
         <div class="post-card">
-            <p class="note" style="margin: 0 0 3.2px;">In reply to <a href="{{ post.data.reply }}">{{ post.data.reply }}</a></p>
+            <p class="note" style="margin: 0 0 3.2px;">In reply to <a href="{{ post.data.reply }}">{{ post.data.author }}</a></p>
             <div class="post-card-note">{{ post.content | safe }}</div>
             <p class="date"><a href="{{ post.url }}">{{ post.date.toDateString() }}</a></p>
         </div>
