Add hotline webring

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -127,6 +127,17 @@
                     </span>
                     <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
                 </div>
+                <div class="link-icon">
+                    <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88" >
+                        <rect class="icon-rect" height="31" width="88" fill="#FA9ABA">
+                    </svg>
+                    <span class="icon-text">
+                        <a href="https://hotlinewebring.club/cobbland/previous">←</a>
+                        <a href="https://hotlinewebring.club/">HOTLINE</a>
+                        <a href="https://hotlinewebring.club/cobbland/next">→</a>
+                    </span>
+                    <img class="icon-border" src="/images/button-outline-88x31.png" aria-hidden="true">
+                </div>
                 <a class="link-icon" id="random-blog-button" href="/">
                     <svg class="icon-svg" xmlns="http://www.w3.org/2000/svg" height="31" width="88">
                         <rect class="icon-rect" height="31" width="88" fill="#A82CB9">
