--- a/_includes/note.njk
+++ b/_includes/note.njk
@@ -4,9 +4,20 @@ layout: "window.html"
 <article class="h-entry">
     {% if reply %}
         <p class="note">In reply to <a href="{{ reply }}" class="u-in-reply-to p-author h-card">{{ author }}</a></p>
+    {% elif bookmark %}
+        <p>
+            <a class="u-bookmark-of h-cite" href="{{ bookmark }}">
+                {{ name }}
+            </a>
+        </p>
+        {% if quote %}
+            <blockquote cite="{{ bookmark }}">{{ quote }}</blockquote>
+        {% endif %}
     {% endif %}
-    <div class="p-content p-name">{{ content | safe }}</div>
-    <p class="article-date">Posted or edited on <a class="u-url" href="{{ page.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a></p>
+    <div class="p-content p-name">
+        {{ content | safe }}
+    </div>
+    <p style="margin-top: 1rem;" class="article-date">Posted or edited on <a class="u-url" href="{{ page.url }}"><time class="dt-published dt-updated" datetime="{{ date }}">{{ date.toDateString() }}</time></a> by <a rel="author" class="p-author h-card" href="/">Cobb</a></p>
     <a rel="syndication invisible" class="u-syndication" href="{{ possed }}"></a>
 </article>
 
