--- a/index.njk
+++ b/index.njk
@@ -33,14 +33,14 @@ special: home-title
     
         <ul class="posts">
             {% for post in collections.post | reverse | limit(12) %}
-                {% if "article" in post.data.tags or "review" in post.data.tags%}
+                {# {% if "article" in post.data.tags or "review" in post.data.tags%} #}
                     <li>
                         <a href="{{ post.url }}">
                             {{ post.data.title }}
                         </a>
                         <p class="date">{{ post.date.toDateString() }}</p>
                     </li>
-                {% endif %}
+                {# {% endif %} #}
             {% endfor %}
         </ul>
     
